Fix Sass issue with visibility and refactor sass

--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -16,59 +16,3 @@ a {
 h1, h2, h3, h4, h5 {
   font-family: "Optima", "Gill Sans", Georgia, sans-serif;
 }
-
-
-article.center p {
-  color: black;
-  margin-top: 4px;
-  margin-bottom: 4px;
-}
-
-article.center h1 {
-  color: $primary-color;
-}
-
-
-
-.footer a {
-  color: $complementary;
-}
-
-aside h2 {
-  color: $primary-color;
-  transform: rotate(-8deg);
-  text-align: center;
-}
-
-article.center h4 {
-  // text-align: right;
-  position: relative;
-  padding-right: 10px;
-  margin-bottom: 0px;
-}
-
-
-.region ul {
-  list-style: none;
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
-  margin: 0;
-  display: block;
-
-}
-
-li {
-  list-style: none;
-  // background: red;
-  margin-left: 0px;
-
-}
-
-
-.skill {
-  font-size: 40px;
-
-}
